# fieldz-desktop

./: .gitignore  Cargo.toml  Deploy-GCP.ps1  README.md  docker-compose.yml  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: algorithm.rs  lib.rs
backend/src/algorithm/: practices.rs  v1.rs  v2.rs  v3.rs
cli/: Cargo.toml
cli/src/: main.rs
communication/: Cargo.toml  build.rs
communication/protos/: algo_input.proto
communication/src/: lib.rs
communication/src/protos/: algo_input.rs  mod.rs
db/: Cargo.toml  README  README.md  up.ps1
db/entity/: Cargo.toml
db/entity/src/: mod.rs  prelude.rs  region.rs
db/entity/src/entities/: coach_conflict.rs  coach_conflict_team_join.rs  field.rs  id.rs  mod.rs  prelude.rs  region.rs  reservation_type.rs  reservation_type_field_size_join.rs  reservation_type_time_slot_join.rs  schedule.rs  schedule_game.rs  schedule_game_group.rs  schedule_team.rs  target.rs  target_group_join.rs  team.rs  team_group.rs  team_group_join.rs  time_slot.rs
db/migration/: Cargo.toml  tmpdb.sqlite
db/migration/src/: lib.rs  m20220101_000001_create_region.rs  m20240221_004555_create_field.rs  m20240223_053746_create_team.rs  m20240302_033333_create_time_slots.rs  m20240316_053808_create_target.rs  m20240331_003613_create_reservation_type.rs  m20240402_222730_add_default_concurrency_count.rs  m20240407_180756_index_database.rs  m20240507_015703_create_schedule_results.rs  m20240702_184439_create_coach_conflicts.rs  m20240812_163502_create_practice.rs  m20241021_031741_add_field_to_schedule_game.rs
db/src/: errors.rs  lib.rs  pre_schedule_report.rs
desktop/: .taurignore  Cargo.toml  tauri.conf.json
desktop/icons/: icon.icns
desktop/src/: auth.rs  auth_redirect_page.html  bridge.rs  main.rs  net.rs  schedule_serde.rs  twitter.rs
entity/src/: mod.rs  prelude.rs
gcloud/backend/: .firebaserc
gcloud/backend/functions/: index.js  package-lock.json  package.json
gcloud/grpc_scheduler/: Cargo.toml
gcloud/grpc_scheduler/src/: main.rs  server.rs
gcloud/grpc_server/: Cargo.toml  Dockerfile  build.rs
gcloud/grpc_server/proto/: algo_input.proto
gcloud/grpc_server/src/: jwt.rs  lib.rs  rpc.rs
gcloud/usage_tracker/functions/: index.js  package-lock.json  package.json
webview/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
webview/src/: app.d.ts  app.html  app.pcss  global.d.ts
webview/src/lib/: auth.ts  authPage.ts  authStore.ts  index.ts  profileListStore.ts  profileStore.ts  secrets.example.ts
webview/src/lib/modals/: Processing.svelte  RegionCreate.svelte  ScheduleGameEdit.svelte  TeamEdit.svelte  TeamSelector.svelte  index.ts
webview/src/routes/: +layout.svelte  +page.svelte
webview/src/routes/field-types/: +page.svelte  FieldTypes.svelte  ReservationType.svelte
webview/src/routes/fields/: FieldCreate.svelte  FieldEdit.svelte  TeamCreate.svelte  TeamEdit.svelte
webview/src/routes/groups/: +page.svelte  Groups.svelte
webview/src/routes/login/: +page.svelte  GitHubIcon.svelte  GoogleIcon.svelte  MicrosoftIcon.svelte  TwitterIcon.svelte
webview/src/routes/region/: +page.svelte  ConflictCard.svelte  RegionCreate.svelte  RegionEdit.svelte  RegionList.svelte
webview/src/routes/region/[id]/: +page.svelte
webview/src/routes/regions/: +page.svelte  CreateRegionButton.svelte  RegionCreate.svelte  RegionList.svelte
webview/src/routes/reservations/: +page.svelte
webview/src/routes/reservations/[fieldId]/: +page.svelte  +page.ts
webview/src/routes/scheduler/: +page.svelte  Processing.svelte  ReportTable.svelte  ScheduleErrorReport.svelte  Target.svelte
webview/src/routes/schedules/: +page.svelte  ScheduleCard.svelte  ScheduleEdit.svelte  ScheduleList.svelte
webview/src/routes/schedules/view/: +page.svelte
webview/src/routes/settings/: +page.svelte
