[package]
name = "cli"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
backend = { path = "../backend" }
chrono-tz = "0.8.6"
chrono = "0.4.34"
anyhow = "1.0.79"
db = { path = "../db" }
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
dialoguer = "0.11.0"
console = "0.15.8"
log = "0.4.21"
