[package]
name = "communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
blake2 = "0.10.6"
futures = "0.3.30"
futures-cpupool = "0.1.8"
grpc = "0.8.3"
hex = "0.4.3"
protobuf = "3.4.0"


[build-dependencies]
# protobuf-codegen-pure = "2.28.0"
protobuf-codegen = "3.4.0"
protoc-bin-vendored = "3.0.0"