[package]
name = "db"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../backend" }
anyhow = "1.0.80"
sea-orm = { version = "0.12", features = [
	"sqlx-sqlite",
	"runtime-tokio-rustls",
	"macros",
] }
migration = { path = "migration" }
entity = { path = "entity" }
serde = "1.0.197"
thiserror = "1.0.57"
chrono = { version = "0.4.34", features = ["serde"] }
itertools = "0.12.1"
