[package]
name = "app"
version = "0.1.5"
description = "An advanced field scheduling and logistics app"
authors = ["Mateo Rodriguez"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "os-all", "updater", "dialog-all"] }
grpc_server = { path = "../gcloud/grpc_server" }
backend = { path = "../backend" }
db = { path = "../db" }
anyhow = { version = "1.0.80" }
futures = "0.3.30"
thiserror = "1.0.57"
dotenv = "0.15.0"
async-stream = "0.3.5"
csv = "1.3.0"
chrono = "0.4.38"
urlencoding = "2.1.3"
keyring = "2.3.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
