[package]
name = "grpc_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../../backend" }
async-stream = "0.3.5"
prost = "0.12.4"
tokio = {version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
