[package]
name = "grpc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../../backend" }
async-stream = "0.3.5"
prost = "0.12.4"
tokio = {version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.11.0"
